Simplifying the code to became a portfolio project.